<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="netrunner.netrunnerplaymat.RunnerPlaymatActivity"
    android:orientation="vertical"
    >
    <GridLayout
        android:layout_width="match_parent" android:layout_height="0dp"
        android:rowCount="4"
        android:columnCount="2"
        android:layout_weight="1"
        >
        <HorizontalScrollView
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/runner_grip_layout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </HorizontalScrollView>
        <ImageView
            android:id="@+id/runner_id_image"
            android:layout_row="1"
            android:layout_column="0"
            android:contentDescription="@string/runner_id" />
        <ScrollView
            android:layout_row="1"
            android:layout_column="1"
            >
            <LinearLayout
                android:id="@+id/runner_programs_layout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </ScrollView>
        <ImageView
            android:id="@+id/runner_stack_image"
            android:layout_row="2" android:layout_column="0"
            android:src="@drawable/runner_back"
            android:contentDescription="@string/stack" />
        <HorizontalScrollView
            android:layout_row="2"
            android:layout_column="1"
            >
            <LinearLayout
                android:id="@+id/runner_hardware_layout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </HorizontalScrollView>
        <ImageView
            android:id="@+id/runner_heap_image"
            android:layout_row="3" android:layout_column="0"
            android:contentDescription="@string/stack" />
        <HorizontalScrollView
            android:layout_row="3"
            android:layout_column="1"
            >
            <LinearLayout
                android:id="@+id/runner_resources_layout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </HorizontalScrollView>
    </GridLayout>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/runner_status_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/black"
            android:gravity="center_vertical"
            >
            <ImageView
                android:id="@+id/runner_clicks"
                android:layout_width="45dp"
                android:src="@drawable/click"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:contentDescription="@string/clicks" />
            <ImageView
                android:id="@+id/runner_credits"
                android:layout_width="45dp"
                android:src="@drawable/credit"
                android:layout_height="50dp"
                android:scaleType="center"
                android:contentDescription="@string/credits" />
            <ImageView
                android:id="@+id/runner_tags"
                android:layout_width="45dp"
                android:src="@drawable/tag"
                android:layout_height="50dp"
                android:scaleType="center"
                android:contentDescription="@string/tags" />
            <ImageView
                android:id="@+id/runner_score_pile"
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:scaleType="center"
                android:src="@android:drawable/ic_menu_search"
                android:contentDescription="@string/score_pile" />
            <ImageView
                android:id="@+id/runner_new_deck"
                android:layout_height="50dp"
                android:layout_width="45dp"
                android:src="@android:drawable/ic_menu_add"
                android:scaleType="center"
                android:contentDescription="@string/new_stack" />
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>